2015-02-19 Riccardo Mottola <rm@gnu.org>

	* Input/NetclassesInput/main.m
	Fix memory leak.

	* Output/GNUstepOutput/GNUstepOutput.m
	Remove unused variables and code setting them.

2015-02-17 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Models/Channel.m
	* Output/GNUstepOutput/Controllers/ContentControllers/StandardContentController.m
	* Output/GNUstepOutput/Controllers/Preferences/PreferencesController.m
	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.m
	* Output/GNUstepOutput/Misc/NSAttributedStringAdditions.m
	* Output/GNUstepOutput/Misc/LookedUpHost.m
	Explicit types and protocols.

2015-02-16 Riccardo Mottola <rm@gnu.org>

	* Input/NetclassesInput/Functions.m
	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.m
	* Output/GNUstepOutput/Controllers/ContentControllers/ContentController.h
	* Output/GNUstepOutput/Controllers/InputController.m
	* Output/GNUstepOutput/Controllers/ServerListConnectionController.m
	* Output/GNUstepOutput/Controllers/ServerListController.h
	* Output/GNUstepOutput/Controllers/ServerListController.m
	* TalkSoupBundles/Functions.m
	Import headers, use explicit types instead of id to avoid wrong signatures.

	* Output/GNUstepOutput/GNUstepOutput.m
	Remove variable set but not used.

2015-02-16 Riccardo Mottola <rm@gnu.org>

	* InFilters/Highlighting/HighlightingPreferencesController.h
	* InFilters/Highlighting/HighlightingPreferencesController.m
	Import and follow NSTableViewDelegate protocol

2015-02-15 Riccardo Mottola <rm@gnu.org>

	* Output/GNUstepOutput/Controllers/NamePromptController.m
	Remove unused variable and assignment.

2015-02-15 Riccardo Mottola <rm@gnu.org>

	* Input/NetclassesInput/Functions.m
	* Input/NetclassesInput/NetclassesInputSendThenDieTransport.m
	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionController.m
	* Output/GNUstepOutput/Controllers/ConnectionController/ConnectionControllerInFilter.m